Implemented the lead UI filter

--- a/libs/i18n/locales/en.yml
+++ b/libs/i18n/locales/en.yml
@@ -5194,6 +5194,7 @@ en:
   create.filter.modal.status.done: 'Done'
   create.filter.modal.status.awaiting: 'Awaiting'
   create.filter.modal.activity.option.label: 'Activity'
+  create.filter.modal.lead.option.label: 'Lead'
   create.filter.modal.activity.column.add.time: 'Add time'
   create.filter.modal.activity.column.assigned.user: 'Assigned to user'
   create.filter.modal.activity.column.client: 'Client'
@@ -5258,3 +5259,32 @@ en:
   create.filter.modal.create.filter.error.message: 'While creating a filter'
   create.filter.modal.edit.filter.message: 'You have successfully edited a filter'
   create.filter.modal.edit.filter.error.message: 'While editing a filter'
+  create.filter.modal.lead.column.lead.name: 'Lead name'
+  create.filter.modal.lead.column.lead.email: 'Lead email'
+  create.filter.modal.lead.column.lead.phone: 'Lead phone'
+  create.filter.modal.lead.column.lead.createdDate: 'Lead created date'
+  create.filter.modal.lead.column.lead.won.time: 'Won time'
+  create.filter.modal.lead.column.lead.owner: 'Lead owner'
+  create.filter.modal.lead.column.lead.closed.on: 'Lead closed on'
+  create.filter.modal.lead.column.lead.done.activities: 'Lead done activities'
+  create.filter.modal.lead.column.lead.first.activity.time: 'First activity time'
+  create.filter.modal.lead.column.lead.last.activity.date: 'Lead last activity date'
+  create.filter.modal.lead.column.lead.last.activity.days: 'Lead last activity (days)'
+  create.filter.modal.lead.column.lead.lost.reason: 'Lead lost reason'
+  create.filter.modal.lead.column.lead.total.activities: 'Lead total activities'
+  create.filter.modal.lead.column.lead.lost.time: 'Lead lost time'
+  create.filter.modal.lead.column.lead.source: 'Lead source'
+  create.filter.modal.lead.column.lead.won.by: 'Won by'
+  create.filter.modal.lead.column.lead.stage: 'Lead stage'
+  create.filter.modal.lead.column.lead.descriptions: 'Lead descriptions'
+  create.filter.modal.lead.column.lead.status: 'Lead status'
+  create.filter.modal.lead.column.lead.activity.to.do: 'Activities to do'
+  create.filter.modal.lead.column.lead.creator: 'Lead creator'
+  create.filter.modal.lead.column.lead.date.entring.stage: 'Date of entering stage'
+  create.filter.modal.lead.column.lead.pipeline: 'Pipeline'
+  create.filter.modal.lead.column.lead.title: 'Title'
+  create.filter.modal.lead.column.lead.update.time: 'Update time'
+  create.filter.modal.open.lead.status: 'Open'
+  create.filter.modal.won.lead.status: 'Won'
+  create.filter.modal.lost.lead.status: 'Lost'
+
