--- a/libs/i18n/locales/en.yml
+++ b/libs/i18n/locales/en.yml
@@ -5309,3 +5309,5 @@ en:
   team.user.personal.details.employee.end.date.label: 'Employment end date'
   team.user.personal.details.primary.location.label: 'Primary Location'
   team.user.personal.details.other.location.label: 'Other Locations'
+  team.user.personal.details.password.reset.success.text: 'Success! - we have emailed a reset link to'
+  team.user.personal.details.password.reset.fail.text: 'An error occured while sending reset passord email'
