--- a/libs/i18n/locales/en.yml
+++ b/libs/i18n/locales/en.yml
@@ -4729,6 +4729,10 @@ en:
   setup.activity-types.update.error: 'While updating a activity type'
   setup.activity-types.delete.success: 'You have successfully deleted a activity type'
   setup.activity-types.delete.error: 'While deleting a activity type'
+  setup.care-pathways.breadcrum.pathname: 'Care Pathways'
+  setup.care-pathways.page.title: 'Care Pathways'
+  setup.care-pathways.tabs.pathways: 'Pathways'
+  setup.care-pathways.tabs.library: 'Library'
   ui.all-template-modal.title: 'All Template'
   ui.all-template-modal.first-left-tab: 'All'
   ui.all-template-modal.second-left-tab: 'My templates'
