Completed changes for edit and delete client note

--- a/libs/i18n/locales/en.yml
+++ b/libs/i18n/locales/en.yml
@@ -5413,3 +5413,9 @@ en:
   team.user.services.save.changes.button: 'Save changes'
   team.user.services.title: 'Services'
   team.user.services.choose.services.title: ' Choose the services this employee can perform'
+  clients.clientcard.notes.clientnote.create: 'Successfully created the note'
+  clients.clientcard.notes.clientnote.create.errormessage: 'Error occured while creating note'
+  clients.clientcard.notes.clientnote.edit: 'Successfully updated the note'
+  clients.clientcard.notes.clientnote.edit.errormessage: 'Error occured while updating note'
+  clients.clientcard.notes.clientnote.delete: 'Successfully deleted the note'
+  clients.clientcard.notes.clientnote.delete.errormessage: 'Error occured while deleting note'
