Worked on the activity lead filter

--- a/libs/i18n/locales/en.yml
+++ b/libs/i18n/locales/en.yml
@@ -5255,6 +5255,10 @@ en:
   create.filter.modal.date.does.not.start.with.operand: 'does not start with'
   create.filter.modal.date.end.with.operand: 'ends with'
   create.filter.modal.date.does.not.end.with.operand: 'does not end with'
+  create.filter.modal.date.is.more.than.operand: 'is more than'
+  create.filter.modal.date.is.less.than.operand: 'is less than'
+  create.filter.modal.date.is.more.or.equal.to.operand: 'is more or equal to'
+  create.filter.modal.date.is.less.or.equal.to.operand: 'is less or equal to'
   create.filter.modal.date.menu.relative.group.name: 'Relative date intervals'
   create.filter.modal.date.menu.relative.option.last.quarter: 'last quarter'
   create.filter.modal.date.menu.relative.option.this.quarter: 'this quarter'
@@ -5332,6 +5336,10 @@ en:
   create.filter.modal.lead.column.lead.activity.to.do: 'Activities to do'
   create.filter.modal.lead.column.lead.creator: 'Lead creator'
   create.filter.modal.lead.column.lead.date.entring.stage: 'Date of entering stage'
+  create.filter.modal.lead.column.lead.email.messages.stage: 'Email messages count'
+  create.filter.modal.lead.column.lead.last.email.received.stage: 'Last email received'
+  create.filter.modal.lead.column.lead.last.email.sent: 'Last email sent'
+  create.filter.modal.lead.column.lead.next.activity.date: 'Next activity date'
   create.filter.modal.lead.column.lead.pipeline: 'Pipeline'
   create.filter.modal.lead.column.lead.title: 'Title'
   create.filter.modal.lead.column.lead.update.time: 'Update time'
