--- a/libs/i18n/locales/en.yml
+++ b/libs/i18n/locales/en.yml
@@ -5456,3 +5456,5 @@ en:
   clients.clientcard.notes.clientnote.edit.errormessage: 'Error occured while updating note'
   clients.clientcard.notes.clientnote.delete: 'Successfully deleted the note'
   clients.clientcard.notes.clientnote.delete.errormessage: 'Error occured while deleting note'
+  clients.clientcard.notes.clientnote.deletemodal.title: 'Delete client Note'
+  clients.clientcard.notes.clientnote.deletemodal.content: 'This note will be deleted. This action is irreversible'
