Added new location fields and custom fields

--- a/libs/i18n/locales/en.yml
+++ b/libs/i18n/locales/en.yml
@@ -85,6 +85,17 @@ en:
   activityList.column.leadStage: 'Lead stage'
   activityList.column.leadStatus: 'Lead status'
   activityList.column.leadDescription: 'Lead description'
+  activityList.column.leadLocation: 'Lead location'
+  activityList.column.leadActivityToDo: 'Activities to do'
+  activityList.column.leadCreator: 'Lead creator'
+  activityList.column.leadDateEnteringStage: 'Date of entering stage'
+  activityList.column.leadEmailMessagesCount: 'Email messages count'
+  activityList.column.leadLastEmailReceived: 'Last email received'
+  activityList.column.leadLastEmailSent: 'Last email sent'
+  activityList.column.leadNextActivityDate: 'Next activity date'
+  activityList.column.leadPipeline: 'Pipeline'
+  activityList.column.leadUpdateTime: 'Update time'
+  activityList.column.leadTitle: 'Title'
   activityList.column.done: 'Done'
   activityList.column.date.editName: 'date'
   activityList.column.subject.editName: 'subject'
@@ -5484,6 +5495,7 @@ en:
   create.filter.modal.lead.column.lead.pipeline: 'Pipeline'
   create.filter.modal.lead.column.lead.title: 'Title'
   create.filter.modal.lead.column.lead.update.time: 'Update time'
+  create.filter.modal.lead.column.lead.location: 'Location'
   create.filter.modal.open.lead.status: 'Open'
   create.filter.modal.won.lead.status: 'Won'
   create.filter.modal.lost.lead.status: 'Lost'
