setup page ui for mobile

--- a/libs/i18n/locales/en.yml
+++ b/libs/i18n/locales/en.yml
@@ -1670,6 +1670,31 @@ en:
   setup.taxrate.notification.createmodal.inputs.glcode.placeholder: eg. Nail Bar
   setup.taxrate.notification.createmodal.deletebtn: Delete
   setup.taxrate.notification.createmodal.activebtn: Active
+  setup.menu.dashborad: 'Dashboard'
+  setup.menu.team: 'Team'
+  setup.menu.staffmanager: 'Staff Manager'
+  setup.menu.schedule: 'schedule'
+  setup.menu.leads: 'Leads'
+  setup.menu.reports: 'Reports'
+  setup.menu.stock: 'Stock'
+  setup.menu.stock.products: 'Products'
+  setup.menu.stock.inventory: 'Inventory Count'
+  setup.menu.stock.purchase: 'Purchase Order'
+  setup.menu.stock.suppliers: 'Suppliers'
+  setup.menu.marketing: 'Marketing'
+  setup.menu.marketing.broadcasts: 'Broadcasts'
+  setup.menu.marketing.reviews: 'Reviews'
+  setup.menu.marketing.gift: 'Gift Vouchers'
+  setup.menu.marketing.referral: 'Referral Tracker'
+  setup.menu.marketing.loyalty: 'Loyalty'
+  setup.menu.money: 'Money'
+  setup.menu.activities: 'Activities'
+  setup.menu.services: 'Services'
+  setup.menu.booking: 'Online Booking'
+  setup.menu.payment: 'Payment Processing'
+  setup.menu.medical.forms: 'Medical Forms'
+  setup.menu.contact: 'Contact Support'
+  setup.menu.help: 'Help Center'
   products.list.newbtn.product: 'New Product'
   products.list.newbtn.category: 'New Category'
   products.list.newbtn.supplier: 'New Supplier'
