--- a/libs/i18n/locales/en.yml
+++ b/libs/i18n/locales/en.yml
@@ -5220,6 +5220,8 @@ en:
   ui.clientcard-prescriptions.options.edit: 'Edit'
   ui.clientcard-prescriptions.options.repeat: 'Repeat'
   ui.clientcard-prescriptions.options.delete: 'Delete'
+  ui.clientcard.photos.notification.delete.success: 'Successfully! {{count}} image{{suffix}} were deleted'
+  ui.clientcard.photos.notification.delete.error: 'Error! {{count}} image{{suffix}} were not deleted'
   galley.view.album.employee.all.value: 'All'
   galley.view.album.services.all.value: 'All'
   galley.view.album.filter.title: 'Filter by'
