--- a/libs/i18n/locales/en.yml
+++ b/libs/i18n/locales/en.yml
@@ -5452,3 +5452,6 @@ en:
   team.user.services.choose.services.title: ' Choose the services this employee can perform'
   clients.activities.markAsDone: 'Mark as done'
   clients.activities.markAsNotDone: 'Mark as not done'
+  clients.activities.delete.message: 'Activity deleted Successfully'
+  clients.activities.delete.error.message: 'An error occured while deleting activity'
+  clients.activities.delete.modal.message: 'Do you really want to delete these records? This process cannot be undone.'
