--- a/libs/i18n/locales/en.yml
+++ b/libs/i18n/locales/en.yml
@@ -5166,7 +5166,7 @@ en:
   ui.client.giftvoucher.pricelabel: 'Voucher Value'
   ui.client.giftvoucher.soldpricelabel: 'Sold 5'
   ui.client.giftvoucher.relationlabel: 'Redeem on all services'
-  ui.vouchercard.back.subtitle: 'lorem ipsum, quia dolor sit, amet, consectetur, adipiscivelit, sed quia non numquam eius modi tempora incidunt, utlabore et dolore magnam aliquam quaerat voluptatem.'
+  ui.vouchercard.back.subtitle: 'This voucher is non-refundable and cannot be exchanged for cash in part or full. It is valid until the date mentioned on the voucher.'
   client.appointments.layout.tab.all.bookings: 'All bookings'
   client.appointments.layout.tab.classes: Classes
   client.appointments.layout.tab.cancelled: Cancelled
@@ -5677,4 +5677,3 @@ en:
   create.filter.modal.open.lead.status: 'Open'
   create.filter.modal.won.lead.status: 'Won'
   create.filter.modal.lost.lead.status: 'Lost'
-
